A style: add video player styles and controls, and include new SVG icons

--- a/public/control.html
+++ b/public/control.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control Panel</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="control_btns">
         <button onclick="sendPlayCommand('Chinese_Beaver_With_Original_Cantonese')">Play Chinese Beaver</button>
+        <button onclick="sendPlayCommand('Chinese_Beaver_With_English_Dub')">Play English Dub</button>
+        <button onclick="sendPlayCommand('Chinese_Beaver_With_English_Sub')">Play English Sub</button>
+        <button onclick="sendPlayCommand('Chinese_Beaver_With_French_Sub')">Play French
       </div>
       <script src="/socket.io/socket.io.js"></script>
       <script>
