fix: update control button layout and adjust CSS padding for better responsiveness

--- a/public/control.html
+++ b/public/control.html
@@ -23,6 +23,7 @@
     <div id="control_btns">
       <button class="btn" onclick="sendPlayCommand('#')">
         <img src="/assets/rawr_icon.svg" alt="rawr">
+        roar
       </button>
       <button class="btn" onclick="sendPlayCommand('#')">
         <img src="../assets/scratch_icon.svg" alt="scratch">
