fix: update button command and correct video source path in HTML files

--- a/public/control.html
+++ b/public/control.html
@@ -21,7 +21,7 @@
       <img class="dino" src="../assets/rex.png" alt="Dino-selected">
     </div>
     <div id="control_btns">
-      <button class="btn" onclick="sendPlayCommand('#')">
+      <button class="btn" onclick="sendPlayCommand('roar')">
         <img src="/assets/rawr_icon.svg" alt="rawr">
         roar
       </button>
