update code and add new videos in assets

--- a/public/control.html
+++ b/public/control.html
@@ -33,19 +33,19 @@
           <div class="btn-title">Roar</div>
         </div>
         <div class="btn-container">
-          <button class="btn" onclick="sendPlayCommand('#', this)">
+          <button class="btn" onclick="sendPlayCommand('attack', this)">
             <img src="assets/scratch_icon.svg" alt="scratch" />
           </button>
           <div class="btn-title">Scratch</div>
         </div>
         <div class="btn-container">
-          <button class="btn" onclick="sendPlayCommand('#', this)">
+          <button class="btn" onclick="sendPlayCommand('bite', this)">
             <img src="assets/eat_icon.svg" alt="eat" />
           </button>
           <div class="btn-title">Eat</div>
         </div>
         <div class="btn-container">
-          <button class="btn" onclick="sendPlayCommand('#', this)">
+          <button class="btn" onclick="sendPlayCommand('run', this)">
             <img src="assets/walky_icon.svg" alt="walk" />
           </button>
           <div class="btn-title">Walk</div>
